--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,24 +29,24 @@ jobs:
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j 4
 
-  macos:
-    timeout-minutes: 10
+  #macos:
+    #timeout-minutes: 10
 
-    runs-on: macos-latest
+    #runs-on: macos-latest
 
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: recursive
+    #steps:
+    #- uses: actions/checkout@v3
+      #with:
+        #submodules: recursive
 
-    - name: Install Dependencies
-      run: brew install clamav
+    #- name: Install Dependencies
+      #run: brew install clamav
 
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    #- name: Configure CMake
+      #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-    - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j 4
+    #- name: Build
+      #run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j 4
 
   windows:
     timeout-minutes: 30
