--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -21,20 +21,13 @@ if (PKG_CONFIG_FOUND)
 endif()
 
 if (NOT TARGET libclamav)
-	find_package(clamav)
-	if (TARGET clamav)
+	find_package(ClamAV)
+	if (TARGET ClamAV)
 		message("------ find_package(clamav) found")
 	else()
-		find_package(libclamav)
-		if (TARGET libclamav)
+		find_package(libClamAV REQUIRED)
+		if (TARGET libClamAV)
 			message("------ find_package(libclamav) found")
-		else()
-			find_package(clamav CONFIG)
-			if (TARGET clamav)
-				message("------ find_package(clamav CONFIG) found")
-			else()
-				find_package(libclamav CONFIG REQUIRED)
-			endif()
 		endif()
 	endif()
 
