--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
 
 add_library(solanaceae_clamav
 	./solanaceae/clamav/test_lib.cpp
@@ -6,7 +6,17 @@ add_library(solanaceae_clamav
 target_include_directories(solanaceae_clamav PUBLIC .)
 target_compile_features(solanaceae_clamav PUBLIC cxx_std_17)
 target_link_libraries(solanaceae_clamav PUBLIC
-	libclamav
+	EXT_SOL::libclamav
+	#solanaceae_util
+)
+
+add_executable(solanaceae_clamav_test
+	./solanaceae/clamav/test_exe.cpp
+)
+target_include_directories(solanaceae_clamav_test PUBLIC .)
+target_compile_features(solanaceae_clamav_test PUBLIC cxx_std_17)
+target_link_libraries(solanaceae_clamav_test PUBLIC
+	EXT_SOL::libclamav
 	#solanaceae_util
 )
 
