sketch out interface and impl

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
 
 add_library(solanaceae_clamav
-	./solanaceae/clamav/test_lib.cpp
+	# TODO: seperate interface lib
+	./solanaceae/clamav/clamav_module_interface.hpp
+	./solanaceae/clamav/clamav_module.hpp
+	./solanaceae/clamav/clamav_module.cpp
 )
 target_include_directories(solanaceae_clamav PUBLIC .)
 target_compile_features(solanaceae_clamav PUBLIC cxx_std_17)
@@ -16,7 +19,7 @@ add_executable(solanaceae_clamav_test
 target_include_directories(solanaceae_clamav_test PUBLIC .)
 target_compile_features(solanaceae_clamav_test PUBLIC cxx_std_17)
 target_link_libraries(solanaceae_clamav_test PUBLIC
-	EXT_SOL::libclamav
+	solanaceae_clamav
 	#solanaceae_util
 )
 
