--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
 
-
 add_subdirectory(./solanaceae_util)
 #add_subdirectory(./solanaceae_plugin)
 
@@ -8,6 +7,8 @@ add_subdirectory(./entt)
 
 add_subdirectory(./solanaceae_contact)
 add_subdirectory(./solanaceae_message3)
+
+include(FetchContent)
 
 # TODO: move to clamav.cmake
 find_package(PkgConfig QUIET)
@@ -21,7 +22,6 @@ if (PKG_CONFIG_FOUND)
 endif()
 
 if (NOT TARGET EXT_SOL::libclamav)
-	include(FetchContent)
 	set(ENABLE_LIBCLAMAV_ONLY ON)
 	set(ENABLE_APP OFF)
 	set(ENABLE_TESTS OFF)
@@ -36,5 +36,14 @@ if (NOT TARGET EXT_SOL::libclamav)
 	FetchContent_MakeAvailable(clamav)
 
 	add_library(EXT_SOL::libclamav ALIAS clamav)
+endif()
+
+# TODO: rename when plugin lib is split
+if (NOT TARGET solanaceae_plugin)
+	FetchContent_Declare(solanaceae_plugin
+		GIT_REPOSITORY https://github.com/Green-Sky/solanaceae_plugin.git
+		GIT_TAG master
+	)
+	FetchContent_MakeAvailable(solanaceae_plugin)
 endif()
 
